# travelling-salesman-problem

./: .gitignore  CMakeLists.txt  branch_bound.drawio  tree.drawio
data/: test.txt
src/: Brute_Force.csv  DFS_Branch_and_Bound.csv  Dynamic_Programming.csv  LC_Branch_and_Bound.csv  LC_Branch_andc_Bound.csv  bb_dfs.csv  bb_lc.csv  branch_bound.csv  files.csv  main.cpp  main.py  plot.py  tsp_algorithms.csv
src/algorithms/: Algorithm.h  BnBNode.cpp  BnBNode.h  BranchAndBound.cpp  BranchAndBound.h  BruteForce.cpp  BruteForce.h  BruteForce2.cpp  BruteForce2.h  DFSBranchBound.cpp  DFSBranchBound.h  DynamicProgramming.cpp  DynamicProgramming.h  FIFOBranchBound.cpp  FIFOBranchBound.h  LCBranchAndBound.cpp  LCBranchAndBound.h  LIFOBranchBound.cpp  LIFOBranchBound.h  Matrix.cpp  Matrix.h
src/array/: Array.h
src/file/: FileReader.cpp  FileReader.h
src/graph/: Graph.cpp  Graph.h
src/graph/edge/: Edge.cpp  Edge.h
src/list/: Iterator.h  List.h
src/list/Node/: DoubleListNode.h
src/result/: AlgorithmResult.cpp  AlgorithmResult.h
src/timer/: Timer.cpp  Timer.h
src/to/: AlgorithmResultTO.cpp  AlgorithmResultTO.h
src/ui/: ConsoleHelper.cpp  ConsoleHelper.h  MainMenu.cpp  MainMenu.h  MenuUtils.cpp  MenuUtils.h  RandomGenerator.cpp  RandomGenerator.h
test-results/: LC_Branch_and_Bound.csv
